Bug Fix: White space at bottom of page

--- a/src/css/setup.css
+++ b/src/css/setup.css
@@ -4,8 +4,7 @@ section {
     flex-direction: column;
     align-content: space-between;
     justify-content: space-evenly;
-    height:100vh;
-    margin-top:-1rem;
+    height:100vh;    
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
